apps/architecture-portal/versioned_docs/version-1.0.46.0/operations/testing-and-proof.mdx
---
title: Testing 与 Proof
area: operations
status: implemented
owners: [core, quality]
source_paths: [docs/quality/core-test-policy.md, docs/quality/2026-08-23-stage9-sequence-recording-acceptance.md, docs/quality/2026-08-03-formal-web-runtime-host-acceptance.md, docs/quality/2026-08-07-stage7-creator-editor-acceptance.md, docs/quality/2026-08-11-web-runtime-hardening-acceptance.md, docs/quality/2026-08-12-opfs-publication-recovery-acceptance.md, docs/quality/2026-08-12-stage7-creator-editor-review.md, docs/quality/2026-08-24-creator-capture-precommit-crop.md, docs/plans/2026-08-09-lmdj-stage8-sample-editor.md, docs/quality/2026-08-09-stage8-sample-editor-acceptance.md, docs/release-evidence/2026-09-01-stage8-m2-macos-chrome-hearing-1.0.40.0.md, docs/release-evidence/2026-09-01-stage7-m3-macos-chrome-pointer-1.0.40.0.md, docs/release-evidence/2026-09-04-stage8-m8-macos-safari-pointer-hearing-1.0.41.0.md, docs/release-evidence/2026-09-04-stage8b-m7-macos-safari-capture-1.0.41.0.md, docs/release-evidence/2026-08-27-web-runtime-l1-macos-safari-pointer-1.0.36.0.md, docs/release-evidence/2026-08-31-web-runtime-l2-macos-chrome-pointer-1.0.40.0.md, docs/release-evidence/2026-08-31-web-runtime-l3-macos-chrome-midi-1.0.40.0.md, docs/release-evidence/2026-09-01-web-runtime-l4-ipados-safari-touch-1.0.40.0.md, docs/release-evidence/release-intents.json, scripts/core.sh, scripts/release.sh, scripts/web-runtime-host.sh, scripts/creator-web.sh, scripts/creator-web-deploy.sh, scripts/web-toolchain-conformance.sh, .github/workflows/pr-review.yml, .github/workflows/self-test-report.yml, scripts/ci/self_test.py, scripts/ci/self_test_report.py, scripts/ci/elastic_runner.py, tests, apps/creator-web/test, .github/actions/configure-build-acceleration/action.yml, .github/actions/macos-core-gates/action.yml, .github/scripts/assert-macos-gate-result.sh, .github/workflows/ci.yml, .github/workflows/core-nightly.yml, .github/workflows/publish-release.yml, .github/workflows/deploy-web-runtime-host.yml, .github/workflows/deploy-creator-web.yml, scripts/ci/incremental_entry.py, scripts/ci/incremental_storage.json, scripts/ci/test_scope.py, scripts/ci/batch_runtime.py, scripts/ci/report_runtime.py, scripts/ci/review_discovery_runtime.py, .github/workflows/incremental-completion.yml, scripts/ci/incremental_completion.py, docs/plans/2026-09-08-lmdj-ci-completion-relay.md]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 测试层级
unit/component 验证局部边界，integration/e2e 验证组合，stress 验证锁自由/并发，Proof 验证 Headless Core 交付链。
## 稳定命令
`scripts/core.sh test dev full` 运行除 stress 外的完整层级；stress 必须显式运行；`scripts/core.sh proof` 也不包含 stress。

## Version identity fixtures

验证 active repository 的测试从 `products/lmdj/version.json`、Assembly 或 generated Runtime
identity 派生当前 Product Build，并用独立 mismatch fixture 证明 consumer 不能漂移。只验证
透传、报告、状态机或错误处理的 pure behavior tests 使用命名 synthetic Product Build；它不
代表已分配或候选身份，下一次 allocation 不修改这类 fixture。历史测试与 reviewed exact
release/snapshot 记录继续保留原版本语义。

Creator Host/package conformance 以 `apps/creator-web/module.json` 为 Host SemVer 与 npm name
权威，并要求 `package.json`、`package-lock.json` 顶层及 `packages[""]` 的 version/name 全部
一致；expected npm name 由 module ID 派生。每个 drift 直接报告 expected、found、authority 与
consumer，不依赖 `npm install` 副作用，也不会自动改写 lockfile。Product Build 与 Creator
Host SemVer 是不同版本轴。

## Release 验证边界

发布保持人工选择、手动操作。获授权的候选可以复用受信完整自测（包括有效历史证据），但必须由发布
验证器证明同一 exact main-history target、可信控制修订、完整固定 suite 集合、
精确 run/attempt、全部必需结果与未过期的 artifact；测试绿色不自动选候选或发布。
具体协议、兼容旧证据和拒绝条件以 [版本与发布](/operations/version-and-release/) 为准，
不能由 PR merge、局部测试或缓存推断。缺失/过期的证据必须通过新的获授权请求补齐，
不把旧 run 的部分重跑拼成完整通过。已发布历史仍按不可变 tag/Release/assets 审计。
当前 `complete-test-v2` 恰好接受旧完整 16-suite self-test 或新 full passed 16-suite
增量批次；focused/none、AI 标签、缺少 suite 或带债务的 batch 都不能授予候选资格。
增量来源还验证原 controller admission attestation、完整三文件重算、真实 API jobs 与
current policy。整个 reference 和实际 executor event 绑定永久 v3 marker；这不改变
自动触发、不自动选择版本，也不等于已经取得真实平台 full-passed 候选证据。

发布控制面的自动化覆盖四段：`scripts/release.sh prepare TAG`、
`scripts/release.sh push-tag TAG`、`scripts/release.sh create-draft TAG` 与 dispatch-only
`publish-release.yml`。每段只证明自己的 postcondition；Draft verification、publication 和后续
deployment 不能由前一段推断。每个 mutation 前后都以
`scripts/release.sh audit --remote --tag TAG` 读取 live state；audit 报告中的 historical exception
只是显式旧事实，不是当前 gate PASS。

Publication job 在显式 dispatch 进入 exact-main-only `release` Environment 后，仍须重新验证
exact Draft；当前单人维护者模式没有 required reviewer，人工授权边界就是这次独立 dispatch。
workflow 成功也不自动触发 Runtime deployment。Runtime deployment 保持 manual-only exact-tag
dispatch，部署 evidence 与 Channel promotion 再分别验证。测试、workflow 或工具已进入仓库，
都不表示当前 Product Build `1.0.46.0` 已经 released、deployed 或 promoted。

## PR review 与乐观合并

本页 CI 切换说明仅在明确授权的 O2 窗口、T5a 和保护规则切换后生效；未合入草案不替代
当前 main 规则。main 是允许暂时有缺陷的集成分支，可发布性属于明确选择并完整验证的
候选。PR 仍需要授权、Task 范围测试、真实冲突处理、当前 head 的 review 与必要对话。
没有冲突时不因 main 前进而 update，不排 Integration Queue，不等产品全量测试绿色。

AI review 是反馈，不是机器正确性门禁。缺凭据、超时、失败、格式损坏或旧 head 结果
不能当作 clean。人工/agent 接管须实际检查当前 diff，并记录 reviewer、head、原因、
findings 处置和未覆盖范围；处理 thread 不等于未经检查自动清空。新 push 后要审查新 head。
`main` 保留 `required_conversation_resolution`，未解决的 findings 仍须有实际处置；
这不是模型对 merge 的自动裁决，clean review 不应产生阻塞用的 inline thread。
实际 merge SHA、review 证据和动作授权分别核验；空 check 列表和 NEUTRAL 不是通过。

`pr-review.yml` 按 GLM → Kimi → Grok 有界回退；获得一次有效 findings 与范围结果即停止，
发现代码问题不触发换模型。三者均不可用时保留真实失败并通过 outbox 报告 Issue，
不能伪造 clean。模型只读取可信控制代码与作为数据的 PR diff，不 checkout 或执行
PR head，也没有 PR 写权限。短 publisher
校验结构化结果及当前 head，用固定 `commit_id` 发布 COMMENT review；模型不生成
合并授权。可信发布器绑定 repository、PR、head、run、attempt 和 backend，liveness
核对同一身份的模型、publisher 与 bot review。发布过程中 head 移动会留下旧 commit
的历史反馈并报告失败，不能冒充新 head 已审查。clean 结果不创建 inline thread；
真实缺凭据、API/模型故障及人工 resolve 的远端验收仍分别记录，不从本地测试推导。
若线上仍要求旧 required contexts 或 strict，报告切换未完成，不借普通 shipping 权限绕过。

## 主干增量批次与手动全量

main push 唤醒 `self-test-report.yml` 的轻量控制器。同一时间最多一个自动批次；
新合入只更新 pending，不取消当前固定目标。下一轮汇总 processed 到最新 main 的
全部 first-parent 提交与有效审查记录，不只读取两端净 diff。确定性旧／新策略下限与
head／policy 绑定的 AI 建议取并集，标签仅展示；合入后不再调用 AI。

合规无消费者说明文档可为 none；局部改动执行相关 Host／模块及行为和依赖测试；
底层、广泛或无法可靠分类的改动为 full。完整集合仍含全部 16 suites，包括 sanitizer
和两组 stress。独立 suite 在其他 suite 失败后继续收集结果，构建阻断如实记录。
共享重型锁继续保护真实资源容量；短控制器锁不得跨重型执行持有。
processed 只是处理进度：none／focused 成功不能清除历史失败或未覆盖债务。

自动 push／完成回调／健康检查只是一条“重新观察持久状态”的通知，不是独立测试命令。
它们在 workflow 层共用 `self-test-report-wakeup-automatic`，保留当前运行和最新一个
pending；后续通知只替换尚未运行的通知，不取消正在执行的控制器或产品测试。
每次手动 dispatch 用独立 run ID 构成入口组，因此不会与自动通知或其他手动命令互相替换。
所有实际写入仍经过 job 层的 `self-test-report` 短锁，保留 `queue: max` 及平台队列上限；
入口合并组不是写锁，不能阻止手动 settle／report 在重型执行期间获取短锁。
自动报告／评审发现通知会等待当前自动 workflow（包括其产品 DAG）结束；这是减少
重复后台读取的取舍，并不承诺长批次期间的自动报告延迟不变，必要时可使用手动报告。
空闲时，已认证批次完成回调独立读取 main；只有 main 与 durable processed 不同才恢复
原调度流程，覆盖完整未处理区间。父运行取消、未取得 claim 不等于 main 没有变化，
也不是测试通过证据。已有其他 active executor 时无关回调不结算、不抢占；
无变化的空闲回调不写 journal、不启动重测试。遗漏通知仍由独立健康检查恢复。
替换 pending 在平台上属于取消，也可能产生既有 completion relay；这些回调同样合并，
但不宣称 relay 工作量归零，远端验收需同时观察回调数量与写锁队列。
切换前已创建的运行按旧配置排空，不因新策略手动取消；本地队列模型不等于远端
突发通知、手动请求保留或完整测试→报告闭环已通过验收。

手动诊断／候选使用同一 workflow 的 `batch_operation=reconcile` 与闭合
`batch_request={"id":"<stable-request-id>","kind":"candidate","target":"<exact-main-SHA>"}`；
诊断改用 `kind=node`，ref 保持 `main`，`journal_config` 留空使用可信固定配置。
两种请求都强制完整 16-suite，目标不随 main 漂移，不推进自动 processed。重送同 ID
恢复原请求；真正重新测试使用新 ID，而不是混合 Re-run jobs 的不同 attempt。

每日产品 cron 与每日未启动告警均已退役。独立轻量健康巡检按 UTC 每小时
7、22、37、52 分运行，用于恢复已有 pending、请求和报告，不能因日期启动产品测试。
完成接续采用只读 `Incremental Completion` 中继，`Self-test Report` 不直接监听自己。
中继 artifact 关联精确父 run／attempt，原控制器重新核验中继与父运行身份，并检查
父运行是否对应 durable active executor 后才结算。若已空闲，则独立确认 main 新变化
后复用原控制器接续；中继不是第二调度器，不写状态或启动测试。
早先直接自订阅被真实 GitHub HTTP 422 拒绝；随后 PR #904 已合入中继修复。
该修订的实际 main push 运行 `34188723712/1` 已启动控制器且控制器成功，证明入口
已运行，不代表产品测试全绿或 O2 通过。跨 workflow 完成接续及链上限后的恢复仍须
真实平台验收，不能用本地测试、控制器成功或 artifact 存在替代。

完成通知链有平台深度上限，巡检提供独立恢复；必须保留真实链到上限→独立巡检
恢复已有尾部→追平→无变化不启动重型任务的完整证据。平台可能投递有界轻量
relay／idle 外壳，但父运行身份本身不能授权新 admission；空闲新 main 的独立核验
才允许原调度器恢复，不能借此结算别人的在途批次，也不承诺
无限即时循环。Actions 延迟或不可用时不能承诺 15 分钟内接续，保留手动恢复入口。
无变化、无待执行请求或显式恢复则不跑重测试。

以下为保留的旧完整来源及旧报告器历史说明，不是当前 dispatch／定时配置：
旧手动自测批次以 `self-test-verdict-<sha>-<run>-<attempt>` artifact 保留结论；
`self-test-report.yml` 在 `Core CI` 完成后使用默认分支代码读取数据，核验稳定 workflow
身份、main 控制修订、目标属于当前 main 历史、精确 attempt，并复用共享的完整证据
校验器。目标可以晚于控制修订；两者分别验证属于 main 历史，不要求目标是控制修订的
祖先。旧 sweep
与兼容 dispatch 尚未选择新自测时不会被误报为缺少 verdict；请求记录已保留却没有
结论的取消、解析失败或上传失败则报告为基础设施问题，不把未验证目标冒充已测 SHA。

报告按 “suite id + 失败类别” 维护带 `self-test` 标签的故障收集 Issue；这是 suite/class
收集桶，不是已完成的根因级去重。目前尚未抽取真实 test ID 与日志错误指纹，不同缺陷
可能进入同一桶，维护者可在分诊时拆成独立缺陷 Issue。首次创建、再现追加
观察、关闭后再现重新打开；同一观察重送与写入响应丢失后的重试先重读 marker，不
重复写入。一次绿色不自动关闭 Issue。`invalid` 为基础设施问题，合法 `superseded`
不制造缺陷。共享证据校验失败与 API 故障显示 `reporting-error`，不改变测试 verdict。
旧来源的 producer 下界是 [#757](https://github.com/endaye/lmdj/pull/757) 的 squash；
每个 run 单独证明控制修订不早于该 producer 且属于 main 历史。旧控制修订即使新
rerun 也明确跳过，部署后的启动失败仍可见，未知祖先关系不当作 legacy 吞掉。
旧扫描和 dispatch 参数只保留在切换前的历史修订，不是当前操作入口。重做自测使用
上文的 durable node／candidate 请求和新 ID，明确选择固定 SHA；不要 rerun 旧执行。

旧 18:00 UTC 缺批检查已退役，不再发送每日缺测告警。当前报告经过持久 outbox，
先保存意图和写入 claim，再核验业务 receipt；响应丢失先查证，不盲目重复 POST。
历史报告重试使用 `batch_operation=report-legacy` 及精确 `review_run_id`／`review_attempt`，
这两个复用字段在该操作中表示 Core CI 来源。`report_config` 留空使用固定 pair。
自动 PR Review discovery 保存冻结 inventory 和跨轮 cursor，未解决或过期证据明确保留。
PR Review 完成不再直接唤醒自测控制器；已发布的 findings 与 scope 仍由审查发布器保存，
main push、原 scheduler health tick 的非执行轮仍可恢复报告，实际批次完成 relay 保持及时通知。
另外，UTC 每小时 `9,24,39,54` 分的 report-only health tick 使用独立的合并等待组，
不再等待长时间运行的产品 workflow 结束；与原 `7,22,37,52` 分的测试恢复巡检分开。
它沿用同一受信任 controller job 和短写锁，只收集已持久记录的失败及 review 观察，
不执行 control、不输出测试请求，也不直接启动产品测试。Python 入口校验两种精确 cron，
并拒绝把报告角色用于产品 control。报告错误只影响这次报告运行，不撤销其他运行已领取的测试。
这是恢复既有工作的巡检，不是定时全量测试或每日部署。原测试恢复巡检保持不变。
每次 discovery 保留完整历史 metadata 轮扫，另给至多一个新／未解决 attempt 公平机会：
按持久注册或最近 disposition 的 generation 轮转，永久错误和仍运行的 review 也消耗其轮次，
不会独占优先路径。历史成功记录不占这个额外预算；历史重扫仍负责发现旧 run 的 later attempt。
自动发现使用 `--background`：已持久保存、仅剩待扫描窗口／轮次或 pending attempt 时，
日志诊断为 `pending`，步骤成功但完整报告仍为 `incomplete`；保留义务等待接续。
日志只输出有限状态与计数，不输出来源正文。它不证明产品健康、完整覆盖或 Issue 已送达。
手动发现仍严格：任何 incomplete 返回非零，精确 attempt 不允许 background 模式。
这不是 15 分钟投递保证：inventory 缺口、不可读来源、metadata 错误、控制池不可用仍明确报错；
过期 evidence 不冒充成功。精确 `report-review`／`report-discovery` 手动恢复入口保持可用。
旧终态 run 的未知 rerun 仍由与历史 ID 数量相关的完整轮扫发现，不承诺全局 artifact 保留期内送达。
执行轮不做附带报告扫描；非执行轮及独立报告巡检做有界报告和发现，积压留待接续。
`report-drain` 只恢复已入队意图；即使没有 pending，也不能证明 scheduler 中所有失败均已入队。
每次自动收集至多一条新 batch 观察，但完整历史鉴权的 API 工作并非一条请求。
新增巡检每小时四次机会，其完成仍经过现有 relay，须统计完整链路的 API 和 runner 成本。
relay 可以独立恢复真实的新 main 工作；不能把“报告巡检本身不运行测试”解释成整个间接链
永远不会唤醒 scheduler。调度延迟、runner 或来源不可用时不承诺严格 15 分钟送达。
源码回归不替代远端调度和完整积压验收。
控制器、报告、review discovery 和 completion relay 的 Python 入口输出
API observation 脱敏诊断行（不是产品 Contract）：`rest`、`graphql` 是共享客户端真实的
GitHub opener 请求尝试，`artifact` 是不带凭据的下载起始次数，不包含其内部所有重定向。
每完成 100 次 opener 尝试输出累计 checkpoint，正常退出（包括返回错误）输出 final；
按 run/attempt/job/step/process 区分进程，每个进程只取最后一条，不能累加累计 checkpoint。
`responses` 表示 HTTP 连接响应类别，不表示业务 JSON、证据或写入已通过校验；
`transport_errors` 表示 opener 的传输错误，响应体读取或解析错误仍按原入口报错。
`minimum_remaining` 只保留合法数值的 core/GraphQL/search 配额低点；配额重置、共享 token
的其他工作使它不能直接代表本次消耗。未发请求的入口没有计数；强制终止可能只有部分
checkpoint，缺少 final 不能当成零成本。日志不包含 URL、请求正文、凭据或异常原文。
这些数字不包含 Git checkout、其他 Actions、模型 API、存储重定向全链或账单；
结合真实 relay 来源、job 时间及 runner 类型做成本验收，不能据此声称总账单为零。
报告器不合并 PR、不创建版本、不发布或部署。

分配 Product Build 或引入 snapshot 的 Task 在合并后核验实际 introducing SHA 的
provenance。缺失 squash witness 时用官方 `architecture-portal.sh witness` 生成并通过
独立授权的 commit/PR 补交；不可手改冻结数据。只在受影响 Task 承担该条件性责任，
不能把完整门户构建变成所有 PR 的隐形 pre-push 门禁。

## 测试结果驱动的 Canary 规划入口

`Canary Planning`（`canary-planning.yml`）支持 main 首次 attempt 的手动
`workflow_dispatch`，以及默认关闭的 `Self-test Report` 完成唤醒。
它连接真实 scheduler 的只读历史重放与独立规划 journal，
不运行 AI 或产品测试，不分配版本、不创建版本 PR，也不发布、部署或晋升。
后续评估／交付协调和真实环境启用仍未完成；入口源码不代表线上自动流程已验收。

自动入口须经独立验收后显式设置 `CANARY_PLANNING_AUTOMATIC_READY=true`，并提供
`CANARY_PLANNING_STORAGE` 的已审查存储配置。没有开关时不分配 runner；没有配置、
初始化或 bootstrap 时拒绝写入，不创建 Issue 或猜测首次基线。完成事件只是唤醒提示，
入口核对真实来源身份后仍读取完整持久 scheduler 结果，不根据 callback 的绿／红状态
决定部署。重复或漏掉事件由下一次唤醒或手动 `reconcile-next` 恢复；现有报告健康巡检
也提供后续唤醒机会，但多层 `workflow_run` 链不保证每次投递。没有新增每日测试或部署。
自动提示只保留最新待处理唤醒且不取消正在运行的工作；手动命令使用独立准入身份，
不会被自动提示替换。两类入口仍共用 controller 的短写锁，不给产品测试加锁。

手动输入 `operation`、`storage` 和 `request`。`storage` 是事先审查的独立规划
Issue 六字段配置：`repository`、`issue_number`、`issue_node_id`、`bot_node_id`、
`workflow_id`、`epoch`，epoch 使用 `canary-planning-` 前缀；不得复用 scheduler、
报告或评审发现存储。配置中的身份仍须通过实际 API 验证，不是用户填写就获得信任。

- `init`：仅初始化精确预留、无评论且 body 匹配空模板的 Issue；不能重置已有 journal。
- `bootstrap`：显式保存初始独立进度，`request={}`。空基线保守选择 bootstrap/full，
  不表示历史站点从未部署；本入口不接受缺少真实 receipt 的非空进度导入。
- `observe-result`：`request={"source_request_id":"<exact-scheduler-request-id>"}`，
  从可信 main 配置读取 scheduler，完整核验已持久结果；失败、缺证据、无需测试及
  非自动来源不产生计划。成功的局部测试只是唤醒，不能缩减各站点累计测试范围。
- `recover`：使用同一个 `source_request_id`，恢复已存在的原始 intent；不存在则拒绝，
  不偷偷建立新计划。初始化／bootstrap 都不会自动发生在读取失败的处理分支。
- `reconcile-next`：`request={}`，与自动入口共用同一逻辑。优先恢复未完成的原始
  intent；否则从真实 scheduler 的稳定顺序中发现一个尚未记录的终态结果，保存完整
  观察后才视为已处理。重复唤醒不重写已有观察，后续调用继续下一项；没有工作则返回 idle。
  失败、缺证据、无需测试及非自动来源保留为忽略观察，不启动 AI，也不伪装成测试通过。

完整决策先通过大小检查，再把 main、control、scheduler 身份、独立进度和预期结果
摘要写入小 intent，随后保存完整分块计划。中途失败只按冻结输入重建并核对原摘要；
写入结果未知时先核验原请求，不能盲目重复 POST。scheduler 有未完成 append 时，
规划器拒绝修复其 checkpoint，交由原 scheduler 恢复。完整计划已保存后，恢复不再
读取 scheduler 或已过期 artifact，更新后的 main／control 不能覆盖原计划。

一个 active 计划保持固定，新成功目标只合并为较新的 pending；迟到旧结果不覆盖它们。
返回记录的 `slot` 是观察当时的位置，不代表该记录此刻仍占有 pending。此阶段没有
完成 active、推进版本／站点进度的命令，须等后续协调器能验证真实完成证据。
`planning.json` 保留完整观察且 `admission_evidence=false`；artifact 存在不是交付许可。
本地重启／丢响应测试不证明线上锁、凭据、配额、存储启用或部署验收已完成。
空版本基线始终保留 `None` 和 bootstrap/full 范围；不能把某轮测试的 base 当作
版本已记账的起点，也不能将已有 active 计划直接解释为评估执行许可。

## Web Runtime Host Proof
`scripts/web-runtime-host.sh configure|build|test|proof|serve|clean` 是正式 Host 的稳定入口。`proof` 先在明确的非 clean-room 阶段运行现有 Chromium AudioWorklet conformance，再以固定 emsdk 连续执行两次 clean build，并逐字节比较两份 dist 后才运行 Python/Node/C++ Host 测试；它验证带 ownership contract 的 canonical manifest、完整生产资产清单，以及无 source/map/fixture/server/dev dependency 的精确 dist inventory。fixture generator 使用真实 native C++ compiler 对 active `realtime_engine.hpp` 常量求值，确定性再生 48 kHz mono PCM fixture；clean-room 阶段只把第二份 dist 与批准的 WAV/metadata pair 复制到 `mktemp -d`，从临时 dist 启动 proof-only server，并禁用 Playwright 的 source-tree toolchain webServer。Chromium 阶段从 Git tracked inventory 选择全部 `web_runtime_host_*.spec.mjs`，因此 source-shell lifecycle、manifest gate 与完整 packaged 创作/restart/failure journey 都属于稳定 Proof；随后单独运行 WebKit capability smoke。全程清除 `NODE_PATH`/`PYTHONPATH` 并禁用 package fetch；`clean` 只删除解析后的 `build/web/host` 子树。

Packaged Chromium 还用真实 capability Worker 覆盖 2.5 秒 delayed result 与 test-only shortened deadline：前者必须保留三项 OPFS capability 并进入 `audio-suspended`，后者必须精确报告 `HOST_TIMEOUT`，两者都验证 Worker/Blob cleanup。Issue #166 的 branch/PR proof 之外还要求一个 pinned Linux runner 在同一固定 CPU + file-I/O contention session 中连续三次完整 `scripts/web-runtime-host.sh proof` 全部通过；不得从更大样本挑选成功运行。

Chromium diagnostic journey 验证 Project v4 fixture、500 个 paced Trigger、frame-stamped Sequence begin/event/flush/stop、next-Bar switch、跨窗口 status/observer/busy、idempotent receipt replay、owner-loss recovery，以及既有 Snapshot/lifecycle/terminal failure paths。Host 不含 Take operation、Project parser、quantizer 或 fallback sequencer。

WebKit smoke 只有在所有 mandatory primitive 可用时才运行 protocol、OPFS、restart 与 lifecycle；否则必须输出结构化 `UNSUPPORTED_WEB_RUNTIME` limitation。当前 Playwright WebKit 缺少 `opfsSyncAccessHandle` 与 `opfsWritableReplace`，因此是明确限制记录，不是完整 PASS。
## Creator Web Proof

Creator 生产 smoke 另从六资产 `web-hosts` Release 中选择 Creator triplet，验证 HTTP identity/
headers/inventory，并在 Chromium 完成 import/open、audio、Pad、Sample、Sequence 与 durable reload。
Runtime smoke 独立选择 Runtime triplet。两套自动化和 manual-only workflow 分别绑定
`https://lmdj-creator.netlify.app/` 与 `https://lmdj-runtime.netlify.app/`，具有独立 evidence 与
exact prior rollback；Release publication 不 fan-out。历史 `1.0.40.0` 证据不可变，新六资产
测试也不自动证明 Creator 或 Runtime 已部署、promoted 或完成物理验收。
`scripts/creator-web.sh configure|build|test|proof|package|serve|clean` 是 Creator 的稳定入口。`test` 覆盖 UI/Runtime Session、deterministic package 与 secure server；`proof` 从真实 Core 生成包含 64 个 assigned Pad 的 portable Bundle，验证 Bundle pack 可复现性、两次 clean Creator build/package 字节一致性，再从隔离 dist 运行 Chromium 创作旅程与 WebKit capability boundary。Creator 与 Diagnostic Host 使用同一 shared native Runtime，不使用 mock Core 或 shim。

Product Build `1.0.41.0` 的 Creator 自动化覆盖长素材格式嗅探、浏览器解码边界、波形选区、Bank 配额、非破坏性提交、超过 1 MiB 的多 chunk 选区 WAV，以及非 snapshot 协议 details 的 reducer containment；malformed Bank/Project quota details 继续 fail closed。自动化也覆盖 Sequence 状态机、Pattern/Record/Stop/settings 控件、统一 Pointer/Keyboard/MIDI admission、next-Bar acknowledgement、Capture trim overlay、reload 与 recovery；Core gates 覆盖 Project v3 migration、journal/receipt/recovery、整数 transport、Facade/CLI/MCP/Native/Web parity。自动化不替代真实听感或物理设备验收，也不证明远端 CI、merge、tag、Release、部署或 Channel promotion。

Product Build `1.0.42.0` 曾在同一入口上叠加 Stage 10 Perform：`test` 增加 `apps/creator-web/test/master_tap.test.ts`、`performance_recording_store.test.ts`、`wav_stream_writer.test.ts` 与 `perform_surface.test.tsx`；Capture 专项证明初始全选时 Start/End 均可操作、两个端点独立、最少一帧、midpoint 命中区与 grab offset 无跳变、middle inert、键盘/辅助技术秒值、只读 Duration，以及提交后的精确 Project Truth artifact 长度；`package` 增加第六个 Creator 资产 `perform_master_tap_worklet` 的哈希与主 bundle 绑定门禁；`proof` 从 Git tracked inventory 选择全部 `tests/platform/web/creator/*.spec.mjs`，因此 `creator_web_perform.spec.mjs` 的打包 Chromium 旅程自动进入稳定 Creator Proof。Core gates 的写入契约同时从 `lmdj.project.v3` 换成 `lmdj.project.v4`，v3 与 v1/v2 一样只剩迁移读取。完整边界见下文 Stage 10 小节；该 Build 至今没有任何 Perform 物理验收。

当前 Product Build `1.0.44.0` 装配 Stage 11 的 Sound Set 能力，并新增两处自动化边界。其一，`lmdj.project-bundle.v1` 由 `1.1.0` 升到 `1.2.0` 以命名 `lmdj.project.v4`：`tests/conformance/project_bundle_contract_test.py` 此前**从未在 CTest 注册**，因此从未运行，也因此没人发现自 Build 43 起本 Build 写出的每一个 Project 都无法打包为 Bundle。该套件现注册为 `conformance.project_bundle`（contract 层），并新增一条把 Bundle 枚举与仓库内 `contracts/project/lmdj.project.v*.schema.json` 清单绑定的用例——下一次 Project Contract 级别移动会先让套件变红，而不是先发布。其二，新增 e2e 用例 `e2e.project_bundle_writer_level`：它驱动真实的 `lmdj-core` 创建一个 Project，再打包它自己写到磁盘上的那棵树，而不是套件自造的形状；旧套件正是因为自造一个 `lmdj.project.v3` checkpoint 才一直是绿的。`python3 tests/conformance/schema_contract_test.py` 继续覆盖 Build 43 引入的 `project-v4-soundset-lineage-valid.json` 与 `project-v4-soundset-lineage-invalid.json` 两个 fixture，并把 Bundle 的 `contract_version` 与四级 `project_contract` 枚举一并钉住。Web 侧 manifest gate 的资源上限由九项增至十三项，Creator 与 Diagnostic 两份分发清单都必须逐值携带四项 Sound Set 上限。该 Build 同样没有任何物理验收，也不证明远端 CI、merge、tag、Release、部署或 Channel promotion。

当前 Product Build `1.0.46.0` 装配 #799 的 Sound Set 试听字节通路，并新增三处自动化边界。其一，`host.soundset_refusal_ownership`（contract 层）一次读取全部六份 Host 协议源，拒绝任何 locked reason 以字符串字面量出现在其中——S11-D3 把资格、内容完整性与音频支持判定放在一处，而每个 Host 自己的套件都不可能看见另一个 Host 偏离 Facade。该门禁的阳性对照逐条证明七个 reason 均可被找到，并在文件内写明它表达不了什么：它区分不了「决定一个拒绝」与「识别一个拒绝」，因此表现层被刻意排除在外。其二，原生验收 journey 增加第 10 腿：四次试听（set demo、已占用槽、空槽、音频不受支持的 Set）之后，读回 revision、Bank 占用与整张 Asset 表，断言 Project 没有移动——「什么都没变」只能在事情已经发生之后断言。该腿同时钉住 Foundry slot 0 的 `source_frames 2646` 与 `prepared_frames 2880`（44.1 kHz 重采样到 48 kHz），因为把源帧交给 Host 会让每一次预览都偏高，而这是唯一能看见重采样的地方。其三，`packages/audio-runtime` 的 audition 池并发用例在 TSan 下运行：一个未修复的构建在普通 build 下 3/3 通过，在 TSan 下报出 `realtime_engine.cpp` 的 data race——已释放但仍被映射的读取没有 sanitizer 就是隐形的。该 Build 同样没有任何物理验收，也不证明远端 CI、merge、tag、Release、部署或 Channel promotion。

`1.0.44.0` 快照冻结之后，[#900](https://github.com/endaye/lmdj/issues/900) 在同一条线上补上第三处边界。Bundle 容器版本与 Project Contract 级别在仓库里有**四份**互相独立的枚举：Contract schema、`tools/project-bundle/project_bundle.py`、Project I/O 的 `parse_index`，以及浏览器侧的 `packages/web-runtime-platform/web/project_bundle_reader.mjs`。#784 移动了前三份、漏掉第四份，于是本 Build 创建的每一个 Project 在字节跨过 Host bridge 之前就被浏览器拒绝，Creator 只显示 `Creator unavailable`；导入 Bundle 是浏览器获得 Project 的唯一途径，因此这等于 Creator 打不开任何本 Build 的 Project。修复把第四份枚举导出，并由 `packages/web-runtime-platform/test/project_bundle_reader.test.mjs` 直接绑定到 `contracts/project/lmdj.project-bundle.v1.schema.json`：该套件的 index fixture 仍由自己拼出，但两个级别字段改为从 Contract 读出而不再手写，越界级别也由 Contract 推导而不是写死 `v5`。同时新增 e2e 用例 `e2e.project_bundle_browser_reader`：它驱动真实 `lmdj-core` 建一个 Project，用出厂 packer 打包，再把那串字节喂给浏览器 reader 模块——`e2e.project_bundle_writer_level` 到打包为止，这条把回路闭到浏览器。覆盖范围要说准：这两道门禁钉住的是 Contract schema 与浏览器 reader 两份枚举；Project I/O 的 `parse_index` 不在这条回路上（Host bridge 是 stub），packer 那份只在 Contract 变更触发 full scope 时才连带跑到。该修复不分配新的 Product Build，`packages/web-runtime-platform` 的 module SemVer 与随之而来的 Build 分配一并推迟。

[#239](https://github.com/endaye/lmdj/issues/239) 在 `1.0.40.0` exact packaged Creator 上完成了 macOS Chrome M2 人耳旅程：严格非零裁剪边界、One Shot、Gate release、Loop Gate、Loop Toggle、Volume/Mute、Bank A 16 Pads、Replace 与 reload 全部通过。约 40 ms 选区的快速重复纹理一度被误判为接缝咔哒；同一候选复听后，操作者明确确认没有明显独立爆音，声音来自短片段的高速循环。精确设备、浏览器、fixture/package 哈希、逐步观察与修正轨迹由 [M2 evidence](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-09-01-stage8-m2-macos-chrome-hearing-1.0.40.0.md) 保留；该 `PASS` 不外推到 Safari、iPadOS、Release、部署或 Channel。

[#240](https://github.com/endaye/lmdj/issues/240) 在同一 `1.0.40.0` exact packaged Creator 上完成了 macOS Chrome M3 Pointer 旅程：内置 MacBook 触控板逐项覆盖 A1–A16、所有 Bank 与两端 Pad、分离/双击、drag-off 与错误目标、模式切换、音频暂停/恢复 probe 和报告导出。tested revision `3aeba5c5` 的最终状态为 Project/Runtime revision 88、Audio `running`、115 admissions / 115 outcomes / 0 rejections；下载报告 SHA-256 为 `80895963d297f304d85db5d2e8726bea1d85726e40231f473872c4acd1f4dc41`。精确环境、package 哈希、逐步可听/可见观察与报告副本由 [M3 evidence](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-09-01-stage7-m3-macos-chrome-pointer-1.0.40.0.md) 保留；该 `PASS` 只升级 Creator macOS Chrome Pointer 行。

[#245](https://github.com/endaye/lmdj/issues/245) 在部署的 `1.0.41.0` Creator 上完成了 macOS Safari M8 Pointer + 实体听感旅程：MacBook Pro `Mac16,8` 的内置触控板覆盖全部 Pad/Bank、分离与双击、drag-off/错误目标、模式导航、focus interruption 与显式 lifecycle recovery；操作者同时完成严格 `0.505–0.545 s` 非零裁剪、One Shot/Gate/Loop Gate/Loop Toggle、Volume/Mute 和 A15/A16 reload/reopen 持久化复听。最终刷新后的报告绑定 Project/Runtime revision 83、Audio `running`、2 admissions / 2 outcomes / 0 rejections、无错误，SHA-256 为 `fb87f54f31196cc01211b9c7da8aec34f5f7659b7f7392bdeffd3f5ba1fcc340`。精确 Build/tag、部署资产、fixture、设备、逐步观察和被排除的早期报告由 [M8 evidence](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-09-04-stage8-m8-macos-safari-pointer-hearing-1.0.41.0.md) 保留；该 `PASS` 不升级 M7、Web Runtime Lab 或 Stage 9 Safari Sequence 行。

[#244](https://github.com/endaye/lmdj/issues/244) 在同一部署 Build 上尝试了 macOS Safari M7 Capture：正常录音、提交和实听成功，但 Command-Tab focus loss 后，约两秒的录音帧仍被保留，trim dialog 与全部恢复控件却被隐藏，无法提交或丢弃。下载报告记录 `recovering`、Project/Runtime revision 84，并出现 `session_id: null` 的 Sequence `trim-overlay`；报告 SHA-256 为 `dcda976fa6de325eac2c18c203db75fd93e1643edb784453530a649af913bd6e`。精确设备、步骤、截图哈希和报告副本由 [M7 failure evidence](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-09-04-stage8b-m7-macos-safari-capture-1.0.41.0.md) 保留；[#625](https://github.com/endaye/lmdj/issues/625) 跟踪缺陷，修复部署后必须从头重跑完整 M7，正常轮次不构成可继承的通过前缀。

#625 增加 ownerless Sequence-overlay 回归门：普通 Sample Capture 在 packaged
Chromium 收到非零帧后触发 focus loss，必须继续显示 retained waveform、明确
stop reason、selection 与 Commit/Discard/Close，导出报告保持 Sequence
`stopped` / `session_id: null`；active armed-Pad Sequence overlay 的既有 gate 保持
不变。Playwright WebKit 仍走既有 unsupported capability boundary，不运行真实
麦克风 Capture。此门不替代修复部署后 #244 的完整 M7 重跑。

#374 的当前 source gate 另覆盖 armed-Pad Capture：Facade component 证明失败、取消和成功提交均不丢 pending events，成功提交 rebase 后可继续录制；Project I/O fault matrix 同时覆盖 manifest 已发布而 journal completion 未执行、以及 prepare 已持久化但 manifest 尚未发布的精确窗口。前者验证 changed-bytes fail-closed、fresh-command receipt replay 与 restart completion；后者验证 exact unchanged Project Truth 才允许 durable abort/disarm，并验证 marker pending 时 settings 在 publication 前拒绝、Project/journal 均停在 `N`，显式 Discard 后仍可继续 flush/Stop，restart 前也完成同一检查。Creator reducer/session 与 packaged Chromium journey 证明 trim overlay 不先 Stop Sequence，并在 A2→armed A1 stop→commit→A1→Stop→reload 后检查 exact persisted event order/count、Pad/Asset、WAV media type/SHA-256/byte length 与 revision。该证据的 Module/Product identity 已由 Build 40 集成，immutable snapshot 仍由 #380 处理，因此不会反写 `1.0.37.0` 历史快照。共享 running-audio BPM-update→immediate switch full-Proof failure 继续归 #375，不通过重排或弱化 #374 journey 消除。

#417 的确定性 Runtime Session gate 把匹配 boundary notification 注入 Stop 的第一次 Host response 返回之前：第一次 `INVALID_ARGUMENT` 表示 durable Stop 可能已提交，同一 action lane 必须用原 `command_id` 重放并在成功后取消 queued boundary，Host transport 继续支持 status、Project inspection 与 reload。反向 case 让两次 Stop 都真实拒绝，要求错误仍向调用方暴露、queued boundary flush 正常完成且不触发 terminal cleanup。该 source 修复来自两个独立远端 run 的同一 packaged Chromium transport-termination signature；Web identity 已由 Build 39 吸收并纳入 Build 40 的集成验收，immutable snapshot 仍归 #380。

Stage 9 H1 的 source remediation 另以确定性 gate 把普通 authoring command 暂停在“已取得本地 Sequence admission、尚未进入 Project I/O”的精确边界，再并发启动 Sequence begin：begin 必须等待 mutation 完成并以 revision conflict 退出，不能创建 stale journal。配套 restart case 直接留下 valid orphan journal，证明下一条 authoring command 先 seal `owner_lost` recovery，再提交新 revision；Project Store 的独立 case 证明绕过 Facade 时仍在 writer lease 内拒绝 active journal，同时保留 settings-only rebase 白名单。这些是自动化并发/恢复证据，不替代 #360 的实体设备旅程。

Stage 9 M2 的 #373 source remediation 使用真实子进程：`press/release/press` 三个 acknowledgement（最后一个 press 未释放）之后子进程先 `SIGSTOP`，父进程再发 `SIGKILL` 并验证 signal exit，保证 destructor/graceful close 不参与。新 owner 先 reconcile/seal，再观察恰一个含两条 canonical event 的 `owner_lost` candidate；显式 apply 后 slot/onset/duration/velocity 顺序保持且 Project revision 只增加一次。review-fix gate 另构造 F1 append 后 execute failure、继续录音、累积 F2 成功与 owner loss，证明 F2 resolve F1，恢复只含 F2 后 tail、apply 不二次写入或用 F1 旧同-key event 覆盖新值。Review Fix 2 以确定性 32-flush inverse-order、F0 post-commit completion error + F1 retry、以及 exact committed/new key/same-key new value 混合 batch 证明反向 completion 只 resolve 精确覆盖 retry、recovery 只保留未提交 residual；同一路径也纳入 32-thread gap-free stress。Review Fix 3 再构造 F0 receipt 已提交/completion 缺失后只 append durable A+B、A+A'+B 或 equivalent-only tail、没有 later flush：reconcile 必须从 tail 扣除 exact A，保留 canonical B/A' 并显式 apply 一次，或对 equivalent-only 不产生 candidate。Integration review gate 再证明 F0(A) completion 后 exact original F1(A+B) retry 仍返回同一 durable identity，residual-only B 与其他 payload 以同一 command id 在 append 前冲突；serialize/reload、v2 缺字段 fail-closed、legacy recovery-only 与 Facade apply 都只恢复 B 一次。Precedence gate 构造未提交 F0(A-old) 后再 acknowledgement durable tail A-new+B、且 owner loss 前没有新 flush；status/list 必须都计 unique 两条，apply 必须让最新 tail 同-key 值胜出并只写一 revision，之后 apply/discard 均无 mutation。Project I/O 独立 gate 另覆盖 monotonic tail reload/flush consumption，以及 torn、checksum、tail sequence、canonical-order corruption 的 retained path/offset/prefix/length/stable-reason/repair-or-discard evidence。该 source gate 已由 Build 40 的集成身份与全套自动验收承接；它仍不替代 #380 的 exact-main immutable snapshot 或 #360 的实体设备旅程。

Stage 9 M3 的 source remediation 注入 manifest 已提交后的 journal completion 失败，在同一 Facade session 中继续录入，再用原 `command_id` 重试：旧 receipt 只重放一次，后到事件保持 pending 并由新命令形成下一 revision。Project I/O fault matrix 对 receipt reload 与 journal completion 两个 post-commit 点分别覆盖 same-bundle retry 和 restart reconcile，并断言 journal identity 与 Project Truth 都是 single-write。

Product Build `1.0.42.0` 曾新增以下 Stage 10 Perform 自动化边界：

- Authoring/Cooker 覆盖 `lmdj.project.v4`：`pattern_slots` 是恰好 16 项的可启动 Pattern 地址空间，`performances` 的事件是 `pad_hit`、`pattern_launch`、`fx_engage`、`fx_move`、`fx_release`、`hold_on`、`hold_off` 七种的封闭并集，tick 仍是 PPQ 960，事件仍只引用 Pad Slot 与 Pattern Slot 而不引用 Asset。`domain.performance`、`domain.migration_v4` 与 `cooker.performance_replay` 分别覆盖模型约束、v3→v4 迁移与只读 replay projection（`resolved_revision`、64 个 Pad、16 个 Pattern Slot 的 Runtime Snapshot、offset 化事件边界与 `event_count`）。`domain.migration_v4` 只接受 v3 声明的文档，携带 Asset Lineage、`performances` 或 `pattern_slots` 的 v3 文档一律拒绝；v1/v2 仍走既有 legacy 迁移读取。v4 是唯一写入契约；Asset Lineage 只允许写在 v4 Project Truth 上，`project_store.cpp` 对更旧契约直接拒绝。
- Project I/O 的 journal 现在区分 `SessionKind::sequence` 与 `SessionKind::performance`，并新增 `begin_performance_draft` → flush → `save_performance_draft` / `discard_performance_draft` 的 draft 生命周期。`project_io.performance_journal`、`project_io.performance_lifecycle`、`project_io.performance_rebase` 与 stress 层的 `project_io.performance_writer_lease_stress` 覆盖这条路径。既有 writer lease admission、flush receipt、canonical tail、owner-loss recovery 与 fail-closed 损坏证据全部不变，Stage 10 只在其上叠加 session kind 与 draft。
- Audio Runtime 覆盖固定八级 master FX 链 `filter → delay → reverb → stutter → gate → reverse → crush → cutter`，取值域为 `0..1000`。`audio.master_fx` 覆盖链行为，`audio.master_fx_determinism` 覆盖同一 preparation 与 gesture 流的逐样本一致、quantum 内 gesture 合并顺序无关，以及 running tempo update 与 fresh preparation 在 quantum 边界一致；`audio.master_fx_allocation_guard` 以替换 `operator new`/`delete` 证明整条链的 render 路径 noexcept、无分配、lock-free；stress 层的 `audio.master_fx_stress` 让八个效果同时承受最大 gesture 速率而不 underrun，其生产时序门禁按线程 CPU 时间判定，sanitizer 构建保留并发路径但不代表生产回调时序。stutter/cutter/delay 的周期由 `master_fx_bar_frames(sample_rate, bpm)` 从 Bar 推导，因此 FX 时序跟随整数 BPM transport 而不是墙钟；gesture 与 tempo 经 `MasterFxControlKind` 的有界控制通道进入，实时线程仍不分配、不加锁、不修改 Project、不量化、不做 journal I/O。
- Application Facade 锁定 20 个 Performance 操作（15 个 command、5 个 query）与 3 个 `pattern.slot.*` command。`facade.performance_operation_contract` 断言注册集合与每个操作的 command/query 归属，并证明送错方法时报 `operation was sent to the wrong Application method` 而不是 `operation is unknown`；`facade.performance_session`、`facade.performance_gesture_admission`、`facade.performance_rebase_matrix`、`facade.performance_replay`、`facade.performance_runtime_bridge`、`facade.performance_engine_adapter` 与 `facade.resample_performance` 分别覆盖会话、手势准入、rebase 矩阵、replay 控制、headless runtime bridge、engine adapter 与 resample 提交。
- Host parity 由真实进程证明：`tests/host/performance_cli_test.py` 固定 CLI operation kind 与 Native 注册集合，`tests/host/performance_cli_session_test.py` 覆盖 CLI 会话，`tests/host/performance_mcp_test.py` 固定 MCP 工具集合与 input/output schema，`tests/host/cross_host_performance_idempotency_test.py` 用同一段 Performance 旅程跨 CLI、MCP 与 Native 子进程断言 receipt 幂等、owner-loss apply/discard 与剩余锁定面，`tests/host/native_host_test.py` 的 `native_performance_adapter_wiring_contract` 断言 Native Host 只经 `make_engine_performance_adapter` 接线、不直接持有 Performance clock。
- Web Runtime Platform 的 master tap 与 master capture 由 Node 与 C++ 分别覆盖。`packages/web-runtime-platform/test/performance_master_tap_worklet.test.mjs` 覆盖平台自有的 AudioWorklet processor；`performance_master_capture.test.mjs` 逐键校验 `{type:"batch", channels, generation, sequence}`（`MAX_BATCH_FRAMES` 为 4800、左右声道等长）、`{type:"stopped", finalSequence, generation}` 与 `{type:"failed", reason:"post-message-failed", droppedFrames, generation}`，`STOP_ACK_TIMEOUT_MS` 为 30000；`runtime_session.test.mjs` 证明 capture 配置只由精确注入的两项 Perform 限额与同源 tap URL 推导——`0`、`-1`、`1.5`、`"32"`、`Number.MAX_SAFE_INTEGER + 1` 与跨源 URL 一律停在 `unconfigured`，状态只沿 `unconfigured` → `configured` → `ready` 前进，失败发布带 code 的 `unavailable`，capture 只能从 `ready` 启动且同时只有一个 owner。`performance_protocol.test.mjs` 与 `packages/web-runtime-platform/test/performance_bridge_test.cpp` 覆盖 Performance 协议与 C++ 侧桥接。
- 分发身份门禁：generated Runtime identity 现有九项 resource limit，新增 `perform_recording_frames` 86400000 与 `perform_recording_queue_batches` 32。Native `ManifestGate` 要求恰好这九个键、每个值精确相等且为 unsigned，多一个默认值、少一个键或任一值漂移都 fail closed；资产清单要求每项恰好 `bytes`/`path`/`role`/`sha256`、path 以 `assets/` 开头且内嵌该项自己的小写 sha256、路径不重复，并要求声明 `compatible_hosts` 的 Creator manifest 恰好一个 `perform_master_tap_worklet`、诊断 Host 恰好零个。`packages/web-runtime-platform/test/manifest_gate_test.cpp` 因此把缺 tap 的 Creator manifest、重复 tap、诊断 Host 上的游离 tap、digest 不符与 manifest 摘要不符全部判为 `protocol_mismatch`。更早的不可变包保留各自的精确身份，不被追认要求携带 Stage 10 字段。
- 打包门禁：`apps/creator-web/tools/package.py` 定位 Vite 产出的唯一 `performance_master_tap_worklet-*.js`，哈希成 `assets/perform-master-tap.<sha256>.js`，并只重写主 bundle 中的那一处引用。零个或多个源文件报 `exactly one Perform master-tap worklet`，主 bundle 引用不落在该精确哈希资产上报 `master-tap worklet binding must occur exactly once`；`apps/creator-web/test/package_test.py` 另外断言该 role 的前缀 `assets/perform-master-tap.`、后缀 `.js`，以及主 bundle 中不再出现构建期文件名。Creator 的 `distribution_contract` 因此声明六个期望资产，诊断 `web-runtime-host` 保持十五个且不含 tap；`apps/creator-web/test/deployment_smoke_test.py` 与 `apps/web-runtime-host/tools/deployment_smoke.py` 在 HTTP 层按 Creator Host 主版本决定必需 inventory：Host `3.x` 起恰好六个资产、六个单例 role 各一；Host `2.x`（例如仍在线的 `1.0.41.0` 已发布部署）恰好五个 pre-Perform role 且不得携带 tap，并按 `assets/<name>.<sha256>.<ext>` 校验哈希路径。部署运行会用同一校验器复核上一个已发布部署作为 rollback anchor，所以新增 role 不能追溯要求更早的已发布 Build 携带它；`1.0.42.0` 的首次 Creator 部署（Actions run `34017836312`）正是因为校验器对 `1.0.41.0` 基线要求六资产而在 prior identity discovery 阶段 fail closed。`scripts/creator-web.sh test` 自此运行该 smoke 套件。role 词表自 [#711](https://github.com/endaye/lmdj/issues/711) 起只写在 `apps/web-runtime-host/tools/asset_roles.py` 一处：两个 packager、共享校验器与两套 smoke fixture 都引用它，不再各自复述字面量，`write_hashed_asset` 在打包时就对未声明的 role fail closed。`apps/web-runtime-host/test/manifest_asset_role_parity_test.py` 是该 pitfall 的 gate exit，`web-runtime-host` 与 `creator-web` 两条 lane 都运行它，双向比对词表与 producer——producer 能发出而校验器不认的 role、校验器认而无人能发出且无已发布 manifest 佐证的 role、以及 packager/校验器/fixture 里残留的 role 字面量都 fail closed；同时对 `apps/web-runtime-host/test/fixtures/published-host-manifests/` 中每个已发布 Build 的原始 `host-manifest.json` 复跑校验器，其 `provenance.json`记录各自的 Release tag、archive 与 sha256，把 rollback anchor 变成常驻回归。
- Creator Perform 界面与 Browser 旅程由 [#435](https://github.com/endaye/lmdj/issues/435) 交付：`apps/creator-web/test/perform_surface.test.tsx` 覆盖界面状态，`tests/platform/web/creator/creator_web_perform.spec.mjs` 在打包 Chromium 上跑完整 Perform 旅程——projection、gesture、WAV、save、replay 与 resample 的持久化，discard 删除临时 WAV 且 owner-loss recovery 可 apply 或 discard，注入失败只封存 durable WAV 前缀而实时音频继续运行，可重试的 WAV bind 走真实 Store receipt 路径并在重试后删除临时文件，录音中的空 slot acknowledgement 与中断关闭同一次 capture，owner 进程丢失后只留一份可恢复录音且不产生第二个 capture owner，停止已保存 Performance 的 replay 后 FX、HOLD 与 Pattern 状态回到 neutral。

以上全部是自动化与源门禁。Stage 10 至今没有任何物理验收：Perform 的低延迟手感、FX 手势、实体 Pad/MIDI 输入与导出 WAV 的真实听感仍是 `deferred` 行，自动化绿只证明状态与边界，不证明可演奏。`1.0.42.0` 的自动化同样不证明远端 CI、merge、tag、Release、不可变门户快照、部署或 Channel promotion；不可变快照与 canary Release 是各自独立的后续授权边界。

Product Build `1.0.25.0` 曾分配 G2 evidence-durability 级联，不新增公开产品能力。
Product Build `1.0.24.0` 曾分配 provider-sdk `1.1.2`、Application Facade `1.4.1`、Web Runtime Platform `0.3.1`、CLI `1.0.13`、MCP `1.1.10`、Native Test Host `1.0.11`、Web Runtime Host `1.2.10`、Creator Web Host `1.3.1` 与两个本地 Proof Provider `1.0.3`。那次变更是 G1/G4 缺陷修复级联：G1 在两条不会写 terminal record 的失败路径上释放 Attempt reservation，G4 为 temp sibling 名引入进程级随机 nonce。Attempt ledger harness 仍保留 orphan reservation 检查，但 G1 的两条修复路径没有自动化覆盖，因为它们只有在 `publish_attempt_outputs` 或 `persist_attempt` 真实失败时才能到达，而当前任务没有引入 fault-injection seam。

当前 packaged Creator mapping 在同一旅程中逐项验证 `Q W E R T Y U I -> Pad 1..8`、`A S D F G H J K -> Pad 9..16` 的可见地址对应，并覆盖 reload -> reopen -> explicit audio activation、16 admissions + 16 outcomes + 0 rejection + `running` 完整 tuple，以及 active `768x1024` -> `1024x768` resize 后 Project/revision/Audio/counters 连续。Node 回归还验证 channels 1–16 的 Note `36..51` mapping；restart-required case 会抑制一次真实 outcome 以触发 bounded timeout，要求旧 generation 的 Worker/transport、MIDI listener、BroadcastChannel、AudioContext 与 lifecycle listener 在 replacement 前归零。synthetic lifecycle/key repeat/MIDI is automated contract only；每项物理状态必须单独记录。

Product Build `1.0.23.0` 曾新增以下 Stage 8 自动化边界（其中 `lmdj.project.v3` 唯一写入已由 `1.0.42.0` 的 v4 取代）：

- Authoring/Project I/O/Cooker/Facade 覆盖 legacy Project 迁移读取、`lmdj.project.v3` 唯一写入、PPQ 960 Pattern、journal overlay、commit receipt、fingerprint recovery 与 Project/Runtime revision 分离。
- Audio Runtime 覆盖整数 BPM anchor、Pattern origin、Bar-boundary notification、固定 SPSC 队列、四种 trigger mode 与 stress tiers；Realtime callback 不做 Project/journal/quantization 工作。
- Web Runtime Platform 覆盖 frame-stamped unified input、Sequence operations/status/settings/recovery、next-Bar boundary、cross-window observer/busy、lifecycle safety 与无 Host-side musical clock。
- Creator Proof 从真实 Core 生成 Project v3 portable Bundle，运行 packaged record→overdub→switch→trim→reload→recover journey，并校验 authority-only UI、隐私、可复现 package 与 WebKit capability boundary。

`1.0.16.8` 的 Web hardening 证据继续由 `docs/quality/2026-08-11-web-runtime-hardening-acceptance.md` 保留；它不会自动升级成 `1.0.23.0` 的本地、CI 或发布结论。以下历史 conformance case 仍是 active regression：

- Chromium/Emscripten AudioWorklet case 人为保持 callback in-flight，验证首个 quiescence timeout 锁存 fatal 后，terminal wait 在第二个同长度 caller budget 内返回 `INTERNAL_ERROR`，而不是无限阻塞 Control Worker。
- Chromium real C++/Emscripten/OPFS Project I/O case 注入 `QuotaExceededError` / `InvalidStateError`，验证 `storage_condition` 分别为 `quota_exceeded` / `invalid_state`；unleased append case 在 seed lease 释放后验证类型化 `invalid_state` 且原有 `seed` 字节不变；owner-binding case 则在 platform A 持有 lease 时让 distinct same-page platform B 依次直接调用 append、replace 与 immutable create，验证三者均为 `project_busy`，已有/缺席 target 与 storage/publication intent inventory 不变，随后 A 仍可 mutation、释放并由 B 重新获取。
- Task 7 的两个 Chromium production Browser Main case 通过 `_lmdj_web_host_poll` 提交 unknown request ID 与已 settlement response 的 duplicate；它们证明 missing-pending 分支只 terminate 一次、后续 send 以 `HOST_PROTOCOL_MISMATCH` sealed、notification 不会投递且 terminal-owner release 完成，但当时没有让另一个 production request 保持 pending。Task 10A 的第三个 case 先经 native-submit seam 提交 untracked `host.status`，再在同一次 scheduled poll 前用真实 `transport.send(host.status)` 注册不同 ID；它证明该 pending promise 收到同一 terminal error并被拒绝、ID 从真实 `pendingRequests` 清除、failure callback/owner release 仍各一次且 notification 为零。完整 packaged journey 仍属于 Task 12 的 Host Proof 边界。

`1.0.16.6` 已有冻结本地证据但因 helper-only production F4 缺口成为 abandoned、unshipped candidate；`1.0.16.7` 也已冻结，但因 same-worker mutator 可复用其他 platform 的 lease 以及 production pending-rejection 证据需纠正而成为 abandoned、unshipped candidate。Task 12 已从干净、已提交的 `1.0.16.8` source boundary 完成 Project I/O Chromium/WebKit、Core Proof、ASan/TSan/stress、Diagnostic Host Proof、Creator Proof、active-tree 与 Portal 全门禁，并冻结 `1.0.16.8 · canary` immutable snapshot。它仍只证明本地自动化与快照：五项物理记录继续未验证，且不声明 push、PR、CI、merge、tag、Release、部署、发布、public smoke 或 Channel promotion。
Product Build `1.0.18.0` 的自动化候选 Proof 曾通过，但第一次人工 Canary 暴露了导入期间 Runtime Session replacement 会残留永久 `importing` UI；其步骤 1–6 结果只保留为诊断证据。`1.0.19.0` 在修复后完成 branch-local full Proof 与不可变 snapshot，但尚未完成人工十步验收；后续人工检查又发现默认键盘行与视觉 Pad 上下顺序相反。`1.0.20.0` 纠正键盘 mapping 并通过十步人工 Canary，但实体 AKAI MPD218 验证在浏览器授权后没有 Trigger；CoreMIDI 抓包确认设备在 PAD BANK A 发送 Channel 10、Note 36/51，而 Creator 只接受 Channel 1。`1.0.21.0` 移除 Creator 的额外 single-channel filter，使 bounded MIDI Note `36..51` mapping 接受 channels 1–16；该 Build 的同源候选 Proof、MPD218 实体复验、protected PR #134、squash merge `5613158`、exact-main CI 与 fresh merged-tree Proof 均已完成并分别绑定。Stage 8 的 `1.0.22.0` 候选必须在同一已提交 revision 上重新执行 Core、Diagnostic Host、Creator 与 Portal Proof；历史结果不能写成当前候选或 merged-main 证据。
## Web 分发 HTTP 门禁
proof-only server 在 bind 前运行完整 dist verifier；它以 dynamic port、新进程 PID 和一次性 nonce 的 ownership record 建立 readiness，端口已被旧进程占用时不能误判为成功。每次读取都用目录文件描述符、`O_NOFOLLOW` 和同一已 `fstat` 的文件描述符，并再次匹配启动时的资产 hash，因此符号链接、路径交换和普通文件替换均不会被服务。所有响应设置精确 COOP/COEP/CORP/CSP 与 `nosniff`，Wasm 为 `application/wasm`；仅 index/manifest 为 `no-store`，内容哈希资产为 immutable。Traversal、目录、Range 与未知路径返回 404，不支持的方法返回 405。EXIT/INT/TERM 都清理 Host 所拥有的 server PID 与临时 readiness 目录。该服务只用于本地 Proof，不是生产发布入口。
## 构建输入与依赖门禁
`scripts/verify-core-dependencies.sh` 校验 `third_party/` 下 vendored 的两个 pinned 依赖，全程离线：缺文件或哈希不符即 fail closed，并保留对 PicoSHA2 interface-library CMake 的结构断言。`cmake/LmdjDependencies.cmake` 同样只读本地副本，因此 configure 与该门禁都不在运行时依赖 `github.com` 可达性——2026-08-12 的边缘限流曾使这两处在受信池与托管 runner 上同时假红。上游 URL、版本、pinned 身份与更新流程记录在 `third_party/README.md`；vendored 字节是 pinned 输入，不是可编辑源码。
pinned emsdk 与 Playwright 浏览器由 `actions/cache` 按 pinned 修订/版本与 lockfile 哈希缓存；未命中时走原有安装步骤并回填。缓存只提供**输入**：emsdk activate 始终执行，因此生成的 `.emscripten` 不会带上他机的工作区路径；Formal Web Runtime Host 仍校验 emsdk HEAD、releases tag 与 `emcc --version`，错误或损坏的缓存会让 lane 失败而非被静默使用；两次 clean build 逐字节一致的确定性门禁不变，它持续证明产物不依赖缓存状态。GitHub 按分支隔离缓存作用域，PR 分支写入的缓存 `main` 读不到，因此加速在合并后的下一次 `main` push 才显现。
## CI 责任

路径分类保留为本地测试建议和 tracked-path 归属检查，不再给每个 PR/main push
启动重型矩阵。完整自测按固定 policy inventory 执行，包含 Docs/static、Portal、
CI Contract、Ubuntu/macOS Core、Linux/native macOS ASan、Coverage、Web Toolchain、
Web Runtime Host、Creator、Web Runtime Lab、Deploy Contract、Chameleon Lab、Package、
TSan stress 和 Release stress 的必需结果。分类的 14 个 lane 与自测的 16 个 suite
不是同一集合，不能拿局部分类产物冒充全量自测。

Linux ASan 保留 Python-hosted sanitizer 覆盖，macOS ASan 保留 native label；
stress 仍必须真实执行，但不阻碍 PR merge。Web Host 的固定 emsdk、locked npm、
Chromium/WebKit 与 stable Proof 身份校验不因触发频率改变而放宽。

测试归属跟随被测对象，而不只是测试文件所在目录。`apps/web-runtime-host/test/deploy_command_test.py` 会对着 fake Netlify server 端到端执行 `scripts/web-runtime-deploy.sh`，因此 scope policy 在既有 `apps/web-runtime-host/` 前缀归属之外，另把该套件与它驱动的 `deploy_orchestrator.py`、`netlify_api.py`、`release_bundle.py` 三个工具映射到 `deploy_contract`。在此之前修改 deploy 命令只选中 `deploy_contract`，却从不运行证明该命令的套件——这是保守测试继承策略内部的 fail-open 缺口。现在 Deploy Contract lane 运行该套件，`scripts/web-runtime-host.sh` 的 `run_nonbrowser_tests` 不再运行它，因此 Formal Web Runtime Host proof 的非浏览器阶段不再包含它；其余六个非浏览器套件的被测对象仍归 `web_runtime_host`，保持不变。union 语义无法减去 lane，该套件与三个工具仍会通过目录前缀继续选中 `web_runtime_host`；这种过度选择是 fail-closed 方向，属于接受范围。

该套件在 Deploy Contract lane 中以 `--shards N` 分片进程并行运行：默认 `min(4, os.cpu_count())`，可用 `LMDJ_DEPLOY_COMMAND_TEST_SHARDS` 覆盖，`--shards 1` 就是原来的串行行为。它可以分片而 Playwright 浏览器套件仍保持 `workers: 1`，是因为每个用例自建临时仓库、fake command 目录与端口 0 的 fake Netlify server，`tearDown` 只读取真实 evidence root，没有共享的时序敏感状态。runner 对发现到的 test id 做确定性划分，逐个打印失败 worker 的完整输出，并在实际执行集合与发现集合不一致时 fail closed——静默丢测是失败，不是更快的通过。唯一的例外是两个 SIGINT/SIGTERM 用例：它们把 deploy 命令推进到阻塞点后向进程组发信号，再对有界的 readiness 与信号后清理窗口断言，是本文件中仅有的带 wall-clock 预算的测试，因此在并行阶段之后单独串行运行；runner 显式记录这两个 id，若测试改名则直接拒绝启动，避免它们被静默放回并行阶段。放宽时序预算换并行会削弱断言，给这两个用例一台空闲机器不会。

Portal 在完整批次中由 reusable workflow 执行；受影响 Task 在本地验证文档声明和
门户源码事实。自测 verdict 而非旧 PR Gate 汇总完整 suite 结果。独立 suite 不以另一
suite 成功或 PR review thread 清空作为准入条件；共享容量锁仍约束实际并发。

受信控制与工作负载分离：review publisher／自测 verdict 使用可信控制代码，不能
在有写权限或模型凭据的上下文执行 PR 自己的控制脚本。fork 内容、标题、标签或路径
不能提升 trust；仓库级 fork 设置和 job trust 检查都不能因乐观策略而放宽。
外部 patch 若由维护者带到同仓库分支，则对新 SHA 建立新的 review/验证，不继承 fork
run。Hosted job 必须在 hosted-runner policy 登记理由；单纯轮询等待不是 evidence。

`select-ubuntu-runner` 已被删除：Ubuntu Core、Linux ASan、Coverage 与 Package 是它最后的消费者，它们改按 `ci-core` 角色路由后，该 job 连同其结果键、Runner API 探测与 Linux 侧 `SELF_HOSTED_RUNNER_READ_TOKEN` 用法一并移除，因此没有任何常规 Linux workload 能再自动购买 GitHub-hosted 容量。Package 仍保留 LFS hydration 并明确禁用 ccache。只有 `core_macos` 被选中时才运行仅存的 macOS selector，其行为不在本次迁移范围内。

busy 与 absent 的区分现在完全是平台行为，不再是 workflow 逻辑：GitHub 本来就会让 label 匹配的 job 在满载角色上排队，因此 busy 是延迟条件；角色离线或不存在则是可用性条件，job 保持排队直到 GitHub 在 24 小时排队上限处取消它，终态是一次 cancelled run 加一条 runner 可用性告警，而不是无限等待，也不是一张静默账单。此前 selector 对整个 run 只解析一次，把两者等同处理会让并发 run 偶然占满池的瞬间把整份 manifest 转到付费基础设施——这正是 2026-08-12 运行历史中的主要成本来源；该 job 现已删除，这条路径不复存在。并发度按角色计算，等于携带该角色的在线 runner service 数量，其余排队。容量不再是固定数字：每台主机运行一组随机启动的 baseline service，外加预注册但默认停止的 elastic service，由主机本地、systemd timer 驱动的控制器（`scripts/ci/elastic_runner.py`，issue #327）决定扩容。netcup 为 4 baseline、注册 4 个 elastic、运营上限 8；Contabo 为 3 baseline、注册 3 个 elastic（04-06）、运营上限 4——因此常态最多再启动一个 elastic，直到以 4 运行的真实排队证据支持已批准的上限 6。控制器不持有任何 GitHub PAT，只观察主机本地状态：所有活跃 service 连续多次观测全忙、冷却期已过、CPU/slice 内存/系统内存/I-O 守护全部允许再接纳一个最重 job 时，才逐个启动 elastic service；内存守护按下一个 job 的峰值足迹预留而非只看当前用量，且永不把 swap 当作缓冲（netcup 无 swap，超限即 OOM）。ci-core service 正在运行 core job（或无法分类、按 core 保守处理的 job）时抑制扩容，baseline service 的 CPUWeight 高于 elastic；持续空闲则从编号最高的 elastic 逐个缩容，停止前复查宽限窗口以规避接单竞态，绝不停止带活跃 Runner.Worker 的 service。观测异常一律 fail closed 保持现有容量。停止的 elastic service 按远小于 GitHub 14 天离线自动注销窗口的周期心跳上线一次；心跳无法到达 listener-ready 即按注册丢失上报且不静默重试。重启只恢复 baseline（仅 baseline enabled）；运维回滚是停用控制器 timer 并停止活跃 elastic service，不注销健康 runner。每个 service 的 CMake build 仍限 3 路并行（netcup unit 为 4），service 数量与之相乘的并发编译量现在由弹性守护而非固定 service 数兜底。控制器决策核心是纯函数，由 `tests/build/ci_elastic_runner_test.py` 确定性覆盖。由于控制器看不到 GitHub 队列深度，突发负载按每个冷却期一台的速度爬坡而不是一次到顶：这是把凭证留在主机之外的既定代价，不是缺陷。两台主机同时是 Tailscale exit node，这是 CI slice 之外余量所覆盖的已记录同宿主负载；容量核算不得假设 runner 独占主机，满弹性负载期间 exit-node 延迟劣化是已接受的影响。`web-runtime-host` 曾是最受该争用影响的 lane——共享池上约 40 分钟，GitHub-hosted 上 16–19 分钟——无论池提供多少槽位，它都决定该池的关键路径；专用 `ci-web-heavy` 角色正是为这条 lane 建立的容量，它现已改由该角色执行，不再参与共享池的争用。其 job 上限仍保持按慢机校准的 75 分钟，而非按 hosted 速度的 45 分钟：上限是 hang 检测而非性能预算，在 netcup 角色给出这条 lane 自己的时长证据之前不收紧。

Linux CI 现按角色标签路由，取代共享的 `contabo` 来源标签：兼跑 LMDJ staging 的 Contabo Singapore 主机标记 `shared-with-staging`，现仅承担 `ci-general` 角色，其 CI slice 至少为应用与 OS 保留约 2 vCPU 与 8 GiB；仅用于 CI 的 netcup 节点标记 `ci-only-host`，承担 `ci-general`、`ci-web-heavy` 与 `ci-core` 角色（`ci-core` 仅在其四个 baseline service 上，弹性 service 不带该角色），全部 runner service 由 `lmdj-ci.slice` 约束、合计约 14 vCore 与 48 GB，为 OS 与缓存维护保留其余资源。`ci-web-heavy` 角色已就绪，Web Toolchain、Creator、Formal Web Runtime Host 与 Web Runtime Lab 四条 Web lane 现已全部切换过去：它们各自以字面标签集合 `self-hosted`、`Linux`、`X64`、`lmdj-linux`、`lmdj-linux-pool`、`ci-web-heavy` 直接路由，不经过 `select-ubuntu-runner`，因此角色满载或缺失时排队而不转向付费 runner，其 trust 条件仍由 job 自身携带而非来自 selector 的 fork 分支。经由共享 `web-ci-proof` 的三条 lane 的 `install-system-deps` 同时改为 `false`：系统依赖随角色预置，Playwright 不应在每次运行时把它们写进两个 runner service 共享的机器状态；Web Runtime Lab 从未共用这套 emsdk/Playwright setup contract，仍直接执行 `scripts/web-runtime-lab.sh test`，没有该输入，也不因换机而被并入重负载路径。Formal Web Runtime Host 与 Web Runtime Lab 是两条此前经由 selector 路由的切换 lane，因此它们同时从 selector 的 lane 条件与 `scope_policy.json` 的 `lane_jobs` 支持集合中移除：selector 不再为一条不读取其输出的 lane 启动，旧聚合器当时也随之移除了该 lane 不消费的 support job。Web Runtime Lab 切换后 selector 已不再有任何 Web 消费者，其后 Ubuntu Core、Linux ASan、Coverage 与 Package 也一并迁出，该 selector 随之删除。Web 侧的切换按 lane 逐条进行，每条都要有自己的真实运行证据，未经审阅的新增路由属于拓扑改动。

`ci-general` 角色现同时承担五个通用 Linux job：Docs/static、Architecture Portal、CI Contract、Deploy Contract 与 Chameleon Lab，各自以字面标签集合 `self-hosted`、`Linux`、`X64`、`lmdj-linux`、`lmdj-linux-pool`、`ci-general` 直接路由，角色满载或缺失时排队而不转向付费 runner。这五个 job 短小、廉价且不共享任何 toolchain contract，因此审阅单位是整组而非逐条 lane；它们各自保留原有的 proof 步骤，切换只改变执行位置。Architecture Portal 是其中唯一以 reusable workflow 运行的 lane：GitHub 不允许 `uses:` job 声明 `runs-on`，因此角色写在被调用的 `architecture-portal.yml` 的 job 上，caller 只保留 lane 条件与 trust 条件；该 workflow 只有 `workflow_call` 触发器且只有这一个 caller，所以角色写在那里不会波及其他路径。

`ci-core` 角色承担四个原生 Core job：Ubuntu Core、Linux ASan、Coverage 与 Core Package，各自以字面标签集合 `self-hosted`、`Linux`、`X64`、`lmdj-linux`、`lmdj-linux-pool`、`ci-core` 直接路由。该角色刻意不跨两台主机：持久原生 `ccache` 与预装的 clang-22/llvm-22 覆盖率工具链是共享主机上的机器状态，不是池状态；两台主机现都预装同版本 Clang/LLVM 22 工具链（noble 自带归档止于 18.1.3，22 来自 apt.llvm.org 的精确主版本套件 `llvm-toolchain-noble-22`，由 `scripts/ci/host/install-llvm-toolchain.sh` 以固定密钥指纹与 apt 优先级 100 安装；#693），角色可放在任一台，但同一时刻只注册在一台上。2026-09-06 起该角色由 Contabo 迁至 netcup：同一 revision 的实测（#676，决定记录于 #298）显示四条原生 Core lane 在 netcup 上冷缓存即已快于 Contabo 热缓存（`core_ubuntu` 热 60 s 对 126 s，`package` 318 s 对 566 s），且 netcup 无 staging 共租户。因此三条原生 Core lane 的 `use-ccache` 不再取决于 selector 输出而恒为 `true`，ccache 统计步骤也变为无条件；Coverage 在角色上不安装任何工具链——此前为 hosted fallback 而存在的 `apt-get install` 步骤已删除，保留下来只会在多个 runner service 共享的机器状态上反复写入；每条 Core lane 都只以 `command -v` 校验 pin 存在。Package 依旧禁用 ccache。

Hosted 控制面负责受信证据、结果汇总和必要的平台选择，自建 workload 按
`ci-web-heavy`、`ci-general`、`ci-core` 角色寻址。角色不是写入、发布或部署权限。
具体 job 集合与 hosted 豁免由仓库 policy/contract tests 管理；迁移触发器不允许
绕过 trust、扩张部署权限或把重型工作静默改到付费容量。

CI 不再依赖 Docker：CI-only 主机没有 daemon，共享主机的 runner 用户也不在 `docker` group，CI 因此永远无法触及运行生产的 socket。CI Contract lane 相应改用按 SHA256 校验的 actionlint release 归档而非 container action，版本不变；digest 指定的是确切字节，而它取代的 Docker tag 只指定版本。

匹配池满载时仍然只排队，不转向付费 runner。若始终没有匹配的 runner 上线，job 保持 queued，并在 GitHub 的 24 小时排队上限后被自动取消——终态是 cancelled 与 runner 可用性告警，而不是无限等待，也不是静默账单。

runner 证据始终分开报告：注册与 online 不等于被选中，被选中不等于成功。真实 `runner_name`、排队秒数、执行秒数、计费 worker time 与 run wall-clock 各自单独记录，任何一项都不能替代另一项。

Web Runtime Lab 是第四条、也是最后一条切换到专用 CI-only 角色的 Web lane。它与前三条不同：它不使用共享的 `web-ci-proof` composite action，而是一条短而稳定的 Node/Python 套件，不在主机上安装任何东西，因此切换只改变执行位置——checkout、Python 3.11、Node 22 与 `scripts/web-runtime-lab.sh test` 的步骤序列不变，也不继承 `web-runtime-host` 那条为量级完全不同的 lane 设置的 75 分钟 hang 检测上限。Formal Web Runtime Host 是继 Web Toolchain 与 Creator 之后第三条切换的 lane，也是这套专用容量最初要解决的对象；它的 Emscripten 身份校验、LFS fixture 补水与 proof 步骤都未改动，只有执行位置改变，因此角色上的持久 toolchain 也无法绕过固定编译器身份检查。Creator lane 是继 Web Toolchain 之后第二条切换的 lane。它此前明确留在 GitHub-hosted Ubuntu：完整 Wasm/OPFS fault matrix 时序敏感，曾在异构共享自建池上超出限定测试预算。那是确定性决策而非容量决策，因此增加 runner 槽位或 toolchain 缓存至今都不构成迁移理由；真正成立的是另一条论据——专用 CI-only 角色消除的是异构本身，且只对已用真实运行证据逐条验证过的 lane 成立，Web Toolchain 先切换并给出证据，Creator 随后按同一方式验证。契约测试现固定其角色路由、trust 条件与 lane 输入，同时保留这段时序敏感的历史理由，避免后续成本或确定性回顾把该迁移误读成容量决策或原样退回。Package 现在完全不经由 hosted 执行，因为已没有 fallback 可走。所有 CI CMake build 均限制为 3 路并行。Linux 原生任务无条件共享 `ci-core` 主机上 checkout 外的持久 `ccache`，Emscripten 与 Package 明确绕过；M1 原生任务使用本机持久 `ccache`，GitHub-hosted macOS fallback lane 不依赖 runner 本地缓存。

macOS Core Proof 与 native ASan 继续优先带 `lmdj` 标签且在线的受信 self-hosted runner。外部 fork、状态密钥缺失、Runner API 失败、机器离线/缺失/标签不符时直接选择 GitHub-hosted macOS；busy 则排队，理由与 Linux 池相同且分量更重——GitHub-hosted macOS 单价是 Linux 的 10.3 倍，在 2026-08-01..13 的 Actions 支出中以 11% 的分钟数占了 57% 的金额。离线仍按可用性条件处理：单台笔记本 runner 睡眠时若排队，会延迟完整自测批次。self-hosted lane 只有在 checkout、加速/`ccache` setup、通信中断或 30 分钟上限导致未发布终态时，才执行一次 GitHub-hosted fallback；加速 setup 成功后已发布的准备、Proof 或 sanitizer 失败是最终语义结果，不触发 fallback。对外 check name 仍为 `core (macos-latest)` 与 `core-asan-macos`。

排队、执行、资源锁等待和端到端时长分别报告；未自动采集的阶段作为明确观测缺口，
不能拿本地耗时代替远端实测。SLO 是容量观察，不把慢但成功的 job 改成失败；
测试自己的行为 timeout 和独立 job hang 上限仍有效。编译、Proof、sanitizer、
Coverage 不自动 retry；缓存统计只是诊断。O1/O2 的真实触发、backend、报告与并发
合并演练须保留实际 URL/run/target/attempt，源码和单测通过不代表远端已验收。

Hosted 用量是预算目标，不是未经验证的保证。观察周必须按 PR updates 与 merges 归一化，把 routine hosted minutes 与旧的无条件 PR/main 矩阵基线对比，分开记录 PR review、完整自测、控制面与显式候选重测成本。Routine hosted minutes 不得持续高于可比基线；任何持续回退都先修正路由或合并 job，无法在不削弱证据的前提下修正时回滚永久迁移，不用增加预算或 retry 掩盖。

本地 Mac 可以在 push 前承担额外的 focused、Proof 或浏览器预检，但这些结果不替代绑定具体 target 的完整自测或发布证据。

本地 `scripts/local-ci.sh --list --json` 只分类，`--lanes` 选择 Task 需要执行的 lanes。
`pass`、`cached-pass`、`fail`、`not-runnable-here` 明确区分；平台、toolchain、
clean-tree package 前提不满足不能算 pass。缓存绑定命令与所有输入内容，位于工作树外，
full-risk 路径是每条 lane 的输入，避免共享改动留下 stale cached pass。
`--declaration-only --pr-body FILE` 只校验声明，绝不继续执行 lanes；body 不缓存，
非 portal 改动的 not-applicable 不是门户通过。完整门户 check 仅受影响 Task 本地运行，
同时保留在完整批次，不是全仓 pre-push 门禁。

安装的 pre-push 默认不运行重型验证，显式 `LMDJ_PRE_PUSH_FULL=1 git push` 才运行
所选 lanes 并传播失败。迁移只接受本工具精确旧模板，先保留备份；个人 hook、symlink、
冲突备份即使 `--force` 也不覆盖。共享 hooks 路径不能成为遍历修改所有 worktree 的理由。
任何本地结果或 hook bypass 都不扩大 push、PR、merge、发布或清理权限。

由 Core Nightly reusable workflow 承担的两个 native suite——Release stress 与 TSan——都以字面标签集合 `self-hosted`、`Linux`、`X64`、`lmdj-linux`、`lmdj-linux-pool`、`ci-core` 路由，并同时加入仓库级 `lmdj-native-heavy` 队列：只点 `ci-core` 角色不足以串行化它们——该角色跨越同一台物理主机上的多个 runner service，两者会在同一秒启动、彼此并行。run `33838737018` 在 2026-09-04 正是如此且两者皆败，使当时的 TSan probe 结果不可用：它测到的是争用，而非主机能否执行 TSan runtime。Release stress 仍最多连续运行 20 次并在首次失败时停止，不把失败重试成绿色。定时 TSan 曾长期留在 GitHub-hosted `ubuntu-24.04`：run `33905688022` 在容量队列生效、probe 独占运行的条件下仍以 `FATAL: ThreadSanitizer: unexpected memory mapping` 在 0.03–0.12 秒内死亡。#693 查明原因在主机而非 runner 或编译器：6.8 内核默认 32 位 `vm.mmap_rnd_bits`，任何 TSan runtime（GCC 13、LLVM 18、LLVM 22）都无法在该布局下直接启动，只能以关闭 ASLR 重新 exec，而 runner unit 的 `LockPersonality=true` 禁止这样做——LLVM 22 因此给出明确 FATAL，LLVM 18 的共享 runtime 则 9/10 次静默死亡（即 #676 探针 B″ 的"0.01 秒无输出"）。Owner 决定由 `scripts/ci/host/configure-sanitizer-aslr.sh` 把 `ci-core` 主机的熵封顶为 28（与 GitHub hosted 镜像一致，保留 ASLR），同 revision 的 probe 随后在 netcup 上通过，定时 TSan 据此迁至 `ci-core`，probe job 与其 dispatch 输入一并删除。该 lane 在构建前以固定的 Clang 22、与 Core 一致的共享 TSan runtime 和 rpath 编译最小双线程程序，要求连续十次启动全部成功，首次失败即停止并保留 infrastructure verification debt；随后以 `CC=clang-22` 显式配置并执行完整 stress suite。`vm.mmap_rnd_bits` 是 root-only（0600）接口，普通 runner 不再通过读取它判断兼容性；预检不修改主机权限或 ASLR。契约测试固定这一路由、实际 runtime 预检、失败分类与编译器 pin。
## 证据分离
本地通过、clean-room Proof、CI 绿色、正式 tag、Channel promotion、门户快照和物理设备验收分别报告。Product Build `1.0.21.0` 的 protected PR run `31684663825`、squash merge `5613158`、exact-main run `31688172806` 与 fresh merged-tree local Proof 已分别绑定；后续 Product Build 的自动化不继承历史 Build 的 PR、CI 或 merge 结论。匹配 Build 的 snapshot provenance 由 Portal 门禁单独判定，不由 Host Proof 推断。物理记录分别是：macOS Safari Pointer `passed on 1.0.36.0 local source`、tested revision `703b339f`（[evidence](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-08-27-web-runtime-l1-macos-safari-pointer-1.0.36.0.md)）；macOS Chrome Pointer `passed on 1.0.40.0 local source`、tested revision `5c094c98`（[evidence](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-08-31-web-runtime-l2-macos-chrome-pointer-1.0.40.0.md)）；macOS Chrome Physical MIDI `passed on 1.0.40.0 local source`、tested revision `1869a925`、Akai MPD218（[evidence](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-08-31-web-runtime-l3-macos-chrome-midi-1.0.40.0.md)）；iPadOS Safari Touch `passed on 1.0.40.0 local source`、tested revision `e2cd0cf9`、iPad Air 13-inch (M3) model `A3268`（[evidence](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-09-01-web-runtime-l4-ipados-safari-touch-1.0.40.0.md)）；同一设备上的 iPadOS Safari lifecycle `passed on 1.0.40.0 local source`、tested revision `67a7ac03`、Voice Memos route interruption（[evidence](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-09-01-web-runtime-l5-ipados-safari-lifecycle-1.0.40.0.md)）。L1–L5 retained physical matrix 已通过；它不升级 Channel，也不替代 Snapshot、tag、CI、merge、发布或部署证据。
## 门户责任
页面状态必须链接实际测试/Proof，并明确自动化无法证明的体验范围。
